--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -105,11 +105,9 @@ body {
 }
 
 #kebab {
-  float: right;
-  top: 0;
   background-color: transparent;
   border: none;
-  right: 0;
+  outline: none;
 }
 
 #kebab i {
@@ -288,11 +286,9 @@ body {
 }
 
 #kebab {
-  float: right;
-  top: 0;
   background-color: transparent;
   border: none;
-  right: 0;
+  outline: none;
 }
 
 #kebab i {
@@ -1118,11 +1114,9 @@ body {
 }
 
 #kebab {
-  float: right;
-  top: 0;
   background-color: transparent;
   border: none;
-  right: 0;
+  outline: none;
 }
 
 #kebab i {
@@ -1664,11 +1658,9 @@ body {
 }
 
 #kebab {
-  float: right;
-  top: 0;
   background-color: transparent;
   border: none;
-  right: 0;
+  outline: none;
 }
 
 #kebab i {
@@ -2347,11 +2339,9 @@ body {
 }
 
 #kebab {
-  float: right;
-  top: 0;
   background-color: transparent;
   border: none;
-  right: 0;
+  outline: none;
 }
 
 #kebab i {
