--- a/assets/sass/_common.scss
+++ b/assets/sass/_common.scss
@@ -125,13 +125,11 @@ body {
 
 
 #kebab{
-  float: right;
-  top: 0;
+
   background-color: transparent;
   border: none;
+outline: none;
 
-
-right: 0;
   i{
     color: #3e64ff;
   }
