--- a/assets/sass/_profile.scss
+++ b/assets/sass/_profile.scss
@@ -7,59 +7,100 @@
   flex-direction: row;
   overflow-y: hidden;
 
-
-
-
+}
 
 .card {
   background-color: $light-grey;
-margin-top: 20px;
   @include shadow-box;
-width: 40%;
 
   .card-title {
-   
-    h3 {
+    h4 {
       font-size: 35px;
       color: $medium-grey;
       margin-bottom: 25px;
-text-align: center;
     }
   }
 
   .card-content {
     color: $dark-grey;
-
-
-  }
-
-  .card-body{
-    input{
-      margin-bottom: 15px;
-    }
+   
+    
   }
 }
+
 
 .profile {
   width: 100%;
   margin: 0 auto;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  
   flex-wrap: wrap;
 
-}
+  .profile_form {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    flex-grow: 0;
+   
+ 
+    border-radius: 2px;
 
-}
-@media (max-width: 580px)
-{
+    background-color: #f8f8f8;
+    box-shadow: 5px 5px 10px rgba(#024a98, 0.05);
+ 
+    .title {
+      width: 100%;
+      text-align: center;
+      padding-bottom: 15px;
 
-.profileSection{
-  .card{
-   width: 80%;
+      h3 {
+        color: #8d8d8d;
+        font-size: 35px;
+        font-weight: 400;
+      }
+    }
+
+    .profileForm {
+      div {
+       
+      
+        input {
+          width: 100%;
+          border: 1.5px solid #c9c7c7;
+          border-radius: 4px;
+          margin-bottom: 20px;
+
+          &:focus {
+            outline: none;
+          }
+        }
+      }
+    }
+
+    .save {
+      width: 100%;
+      text-align: center;
+      padding-top: 15px;
+
+      button {
+        background-color: transparent;
+        border: 1px solid #007bff;
+        color: #007bff;
+        border-radius: 3px;
+        padding: 3px 10px;
+        transition: all 0.3s ease-in-out;
+
+        &:focus {
+          outline: none;
+        }
+
+        &:hover {
+          background-color: #007bff;
+          color: white;
+        }
+      }
+    }
   }
-  h3{
-    font-size: 25px;
-  }
-}
 }
