--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -487,6 +487,15 @@ a[data-toggle="collapse"] {
   width: 15px;
 }
 
+#lineBwQstn{
+  margin-left: 10px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  width: 100%;
+  height: 1px;
+  background-color: lightgrey;
+}
+
 @media (max-width: 768px) {
   #sidebar {
     width: 100%;
@@ -2457,7 +2466,7 @@ a:hover {
 .newform .form_container .formContent .radiosection,
 .newform .form_container .formContent .checksection,
 .newform .form_container .formContent .opensection {
-  padding: 30px 10px;
+  padding: 10px;
   color: #8d8d8d;
   font-size: 15px;
 }
